# Charisma

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  launch.py  pylock.toml  pyproject.toml  requirements.txt
charisma/: __init__.py  __version__.py  main.py
charisma/config/: __init__.py  config_manager.py  models.py
charisma/core/: __init__.py  data_processor.py  model_manager.py  trainer.py
charisma/integrations/: __init__.py  huggingface_client.py  notion_client.py
charisma/ui/: __init__.py  app.py
charisma/ui/tabs/: __init__.py  huggingface_tab.py  inference_tab.py  logs_tab.py  main_tab.py  settings_tab.py
charisma/utils/: __init__.py  cache_manager.py  logger.py  validators.py
cookbook/: charisma_colab.ipynb
frontend/: package.json
