[project]
name = "charisma"
version = "0.0.0"
description = "Talk to Your AI Characters"
requires-python = ">=3.12"
dependencies = [
      "torch>=2.5.1",
      "torchvision>=0.20.1",
      "torchaudio>=2.5.1",
      "flask>=3.1.0",
      "librosa>=0.10.2.post1",
      "transformers>=4.49.0",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system == 'Windows'" },
  { index = "pytorch-cu124", marker = "platform_system == 'Linux'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "platform_system == 'Windows'" },
  { index = "pytorch-cu124", marker = "platform_system == 'Linux'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "platform_system == 'Windows'" },
    { index = "pytorch-cu124", marker = "platform_system == 'Linux'" },
    ]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
