[project]
name = "charisma"
version = "0.1.0"
description = "AI-powered personal memory cloning and character modeling using LLMs"
authors = [
    {name = "Muhammad Fiaz", email = "contact@muhammadfiaz.com"}
]
readme = {file = "README.md",content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai", "llm", "memory", "fine-tuning", "unsloth", "notion", "gradio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
  "torch>=2.5.0",
  "torchvision>=0.20.0",
  "logly>=0.1.6",
  "packaging>=24.0,<25.0",
  "requests>=2.32",
  "tqdm>=4.67",
  "regex>=2024.11",
  "sentencepiece>=0.2",
  "safetensors>=0.5",
  "gradio>=5.12",
  "gradio-client>=1.5.4",
  "typer>=0.9.0",
  "toml>=0.10.2",
  "notion-client>=2.2.1",
  "rich>=14.2.0",
  "datasets>=3.4.1",
  "accelerate>=0.34.1",
  "peft>=0.7.1",
  "transformers>=4.51.3,<4.58.0",
  "trl>=0.18.2,<0.24.0",
  "bitsandbytes>=0.45.5",
  "xformers>=0.0.28",
  "unsloth>=2025.10.12",
  "triton-windows>=3.5.0.post21",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["charisma"]

[tool.setuptools.package-data]
charisma = ["py.typed"]

[project.urls]
source = "https://github.com/muhammad-fiaz/finetune-web-ui.git"
homepage = "https://github.com/muhammad-fiaz/finetune-web-ui#readme"
documentation = "https://github.com/muhammad-fiaz/finetune-web-ui#readme"
repository = "https://github.com/muhammad-fiaz/finetune-web-ui"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true


[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
]

[tool.uv.pip]
extra = ["dev"]
python = "3.12"
output-file = "requirements.txt"


[tool.uv]
package = true

[project.scripts]
charisma = "charisma.main:main"



[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100



