[project]
name = "charisma"
version = "0.1.0"
description = "AI-powered personal memory cloning and character modeling using LLMs"
authors = [
    {name = "Muhammad Fiaz", email = "contact@muhammadfiaz.com"}
]
readme = {file = "README.md",content-type = "text/markdown"}
requires-python = ">=3.10, <=3.13"
license = {text = "AGPL"}
keywords = ["ai", "llm", "memory", "fine-tuning", "unsloth", "notion", "gradio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
  "logly>=0.1.6",
  "requests>=2.32",
  "regex>=2024.11",
  "gradio>=5.12",
  "gradio-client>=1.5.4",
  "typer>=0.9.0",
  "toml>=0.10.2",
  "notion-client>=2.2.1,<2.6.0",
  "rich>=14.2.0",
  "torch",
  "torchvision",
  "torchaudio",
  "wheel>=0.42.0",
  "packaging",
  "numpy",
  "tqdm",
  "psutil",
  "tyro",
  "protobuf",
  "sentencepiece>=0.2.0",
  "datasets>=3.4.1,!=4.0.*,!=4.1.0",
  "accelerate>=0.34.1",
  "peft>=0.7.1,!=0.11.0",
  "huggingface_hub>=0.34.0",
  "hf_transfer",
  "diffusers",
  "transformers>=4.51.3,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,!=4.57.0,<=4.57.2",
  "trl>=0.18.2,!=0.19.0,<=0.23.0",
  "unsloth_zoo>=2025.10.13",
  # Triton for Windows and Linux
  "triton>=3.0.0 ; 'linux' in sys_platform",
  "triton-windows>=3.5.0 ; sys_platform == 'win32' and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
  "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0 ; sys_platform == 'win32'",
  "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0 ; 'linux' in sys_platform",
    "xformers>=0.0.28,<0.0.33 ; sys_platform == 'win32'",
  "xformers ; 'linux' in sys_platform",
    "unsloth @ git+https://github.com/unslothai/unsloth.git",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"


[tool.setuptools]
packages = ["charisma"]

[tool.setuptools.package-data]
charisma = ["py.typed"]

[project.urls]
source = "https://github.com/muhammad-fiaz/charisma.git"
homepage = "https://github.com/muhammad-fiaz/charisma#readme"
documentation = "https://github.com/muhammad-fiaz/charisma#readme"
repository = "https://github.com/muhammad-fiaz/charisma"


[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "black>=24.9.1",
    "ruff>=0.0.306",
]
[project.scripts]
charisma = "charisma.main:main"

[tool.uv.pip]
output-file = "requirements.txt"
universal = true
no-strip-markers = true
no-strip-extras = true
verify-hashes = true
require-hashes = true

[tool.uv.extra-build-dependencies]
xformers = ["torch", "ninja"]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }
torchaudio = { index = "pytorch-cu129" }
xformers = { index = "pytorch-cu129" }

[tool.uv]
package = true
managed = true
environments = ["sys_platform != 'darwin'"]


[tool.uv.build-backend]
module-name = "charisma"
module-root = ""

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100



